# django-htmx-base

./: .gitignore  README.md  pyproject.toml
.github/workflows/: check_version.py  ci.yml  release.yml
django_htmx_base/: apps.py  forms.py  models.py  routers.py  urls.py  views.py  viewsets.py  widgets.py
django_htmx_base.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: forms.py  models.py  settings.py  test_smoke.py  test_viewsets.py  tests.py  urls.py  viewsets.py
tests/templates/: base.html  detail.html  list.html
tests/templates/partials/: download_button.html
tests/templates/table/partials/: filter_badges.html  filters.html
