[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "django-htmx-base"
version = "0.1.2"
dependencies = [
	"django>=6.0.2",
	"django-htmx>=1.27.0",
]
description = "A collection of classes and abstract models for django + htmx projects"
readme = "README.rst"
keywords = [
	"Django",
	"HTMX",
]
license = "MIT"
license-files = [ "LICENSE" ]
requires-python = ">= 3.12"
authors = [
{name = "Jorge Guerra", email = "jorge@retlabs.cl"},
]
classifiers = [
	"Environment :: Web Environment",
	"Framework :: Django",
	"Framework :: Django :: 6.0",
	"Intended Audience :: Developers",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"Topic :: Internet :: WWW/HTTP",
	"Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Repository = "https://github.com/retriever-laboratories/django-htmx-base"

[dependency-groups]
dev = [
	"ruff>=0.13.0",
]

[tool.ruff.lint]
# Go to https://docs.astral.sh/ruff/rules/ to see all the available rules.
select = ["F", "E", "W", "I", "N", "C90", "ARG"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/" = ["ARG001"]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["django_htmx_base"]

[tool.ruff.format]
docstring-code-format = true
